# obj-mapping

./: README.md  pyproject.toml
objmapper/: _abstracted.py  _typeshack.py  enums.py  metaobjmapping.py  objmapping.py
objmapper/components/: _annotationwrapper.py  _blueprint.py  attribute.py
objmapper/helpers/: _checks.py
